# rag-saas

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_INSTRUCTION_RAG.txt  Makefile  README.md  docker-compose.yml
.claude/: settings.json
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: main.py
backend/app/api/routes/: chat.py  documents.py  health.py
backend/app/core/: config.py  dependencies.py  exceptions.py  logging.py  storage.py  vector_store.py
backend/app/generation/: llm.py  memory.py  prompts.py
backend/app/ingestion/: chunker.py  embedder.py  parser.py
backend/app/models/: chunk.py  conversation.py  database.py  document.py
backend/app/retrieval/: fusion.py  pipeline.py  reranker.py  searcher.py
backend/scripts/: wait_for_http.py
backend/tests/: conftest.py
backend/tests/integration/: test_chat.py  test_retrieval.py
backend/tests/unit/: test_chunker.py  test_embedder.py  test_parser.py
backend/workers/: tasks.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: layout.tsx  providers.tsx
frontend/app/chat/[docId]/: page.tsx
frontend/app/documents/: page.tsx
frontend/app/upload/: page.tsx
frontend/components/: ChatWindow.tsx  CitationPanel.tsx  DocumentList.tsx  DocumentUpload.tsx  MessageBubble.tsx
frontend/hooks/: useChat.ts  useDocuments.ts
infra/nginx/: nginx.conf
